Sistema Neuronal Mejorado con o1-preview

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,13 +1,17 @@
 {
-    "include": [
-      "src"
-    ],
-    "exclude": [
-      "**/__pycache__",
-      "venv"
-    ],
-    "venvPath": "./",
-    "venv": "venv",
-    "pythonVersion": "3.12",
-    "reportMissingImports": false
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "**/__pycache__",
+    "venv"
+  ],
+  "venvPath": "./",
+  "venv": "venv",
+  "pythonVersion": "3.10",
+  "typeCheckingMode": "basic",
+  "reportMissingImports": false,
+  "reportMissingTypeStubs": false,
+  "reportUndefinedVariable": false,
+  "reportGeneralTypeIssues": false
 }
