--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ python-telegram-bot==21.6
 pytz==2024.2
 requests==2.32.3
 rich==13.9.2
+schedule==1.2.2
 scikit-learn==1.5.2
 scipy==1.14.1
 setuptools==75.2.0
