--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
 astunparse==1.6.3
+asyncio==3.4.3
 attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
