--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,17 @@ anyio==4.6.2.post1
 astunparse==1.6.3
 asyncio==3.4.3
 attrs==24.2.0
+blis==0.7.11
+catalogue==2.0.10
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.7
+cloudpathlib==0.20.0
 colorama==0.4.6
+confection==0.1.5
+cymem==2.0.8
 distro==1.9.0
+es_core_news_md @ https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.8.0/es_core_news_md-3.8.0-py3-none-any.whl#sha256=478b8bb3f3e8eb149192f7d80e7cd64f990b7e9bccbc5329df41a57e86326be2
 flatbuffers==24.3.25
 frozenlist==1.4.1
 gast==0.6.0
@@ -21,16 +28,21 @@ h5py==3.12.1
 httpcore==1.0.6
 httpx==0.27.2
 idna==3.10
+Jinja2==3.1.4
 jiter==0.6.1
 joblib==1.4.2
 keras==3.6.0
+langcodes==3.4.1
+language_data==1.2.0
 libclang==18.1.1
+marisa-trie==1.2.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 ml-dtypes==0.4.1
 multidict==6.1.0
+murmurhash==1.0.10
 namex==0.0.8
 numpy==1.26.4
 openai==0.28.0
@@ -38,6 +50,7 @@ opt_einsum==3.4.0
 optree==0.13.0
 packaging==24.1
 pandas==2.2.3
+preshed==3.0.9
 propcache==0.2.0
 protobuf==4.25.5
 psycopg2-binary==2.9.10
@@ -57,20 +70,30 @@ schedule==1.2.2
 scikit-learn==1.5.2
 scipy==1.14.1
 setuptools==75.2.0
+shellingham==1.5.4
 six==1.16.0
+smart-open==7.0.5
 sniffio==1.3.1
+spacy==3.7.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
 tensorflow-intel==2.17.0
 termcolor==2.5.0
 TgCrypto==1.2.5
+thinc==8.2.5
 threadpoolctl==3.5.0
 tqdm==4.66.5
+typer==0.12.5
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+wasabi==1.1.3
 watchdog==5.0.3
+weasel==0.4.1
 Werkzeug==3.0.4
 wheel==0.44.0
 wrapt==1.16.0
